Fixed Navigation Issues + Testing Double Scrollbar Fixes.

--- a/styles/global.css
+++ b/styles/global.css
@@ -38,7 +38,6 @@ html {
   overflow-y: auto;
   width: 100%;
   min-height: 100%;
-  height: 100%;
 }
 
 body {
@@ -46,7 +45,6 @@ body {
   line-height: var(--responsive-body-line-height-mobile);
   width: 100%;
   min-height: 100vh;
-  height: 100%;
   margin: 0;
   padding: 0;
   position: relative;
